--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Slid Menu Bar</title>
-	<link rel="stylesheet" type="text/css" href="css/Shivsmit.css">
+	<link rel="stylesheet" type="text/css" href="Shivsmit.css">
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
 </head> 
