--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
  
 		<ul>
 			<li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-			<li><a href="shivsmitphoto/index1.html"><i class="fas fa-camera"></i>Photos</a></li>
-			<li><a href="shivsmitvideo/index2.html"><i class="fas fa-video"></i>Videos</a></li>
+			<li><a href="index1.html"><i class="fas fa-camera"></i>Photos</a></li>
+			<li><a href="index2.html"><i class="fas fa-video"></i>Videos</a></li>
 		
 
 		</ul>
