--- a/index1.html
+++ b/index1.html
@@ -18,9 +18,9 @@
 		<h1>ShivSmit</h1>
  
 		<ul>
-		<li><a href="../index.html"><i class="fas fa-home"></i>Home</a></li>
+		<li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
 			<li><a href="index1.html"><i class="fas fa-camera"></i>Photos</a></li>
-			<li><a href="../shivsmitvideo/index2.html"><i class="fas fa-video"></i>Videos</a></li>
+			<li><a href="index2.html"><i class="fas fa-video"></i>Videos</a></li>
 		
 		
 
@@ -33,133 +33,133 @@
 	<div class="container">
 		
 		<div class="gallery">
-			<img src="../photos/image2.jpg">
+			<img src="image2.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image3.jpg">
+			<img src="image3.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image4.jpg">
+			<img src="image4.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image7.jpg">
+			<img src="image7.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image8.jpg">
+			<img src="image8.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image9.jpg">
+			<img src="image9.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image10.jpg">
+			<img src="image10.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image11.jpg">
+			<img src="image11.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image12.jpg">
+			<img src="image12.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image14.jpg">
+			<img src="image14.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image15.jpg">
+			<img src="image15.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image16.jpg">
+			<img src="image16.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image17.jpg">
+			<img src="image17.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image18.jpg">
+			<img src="image18.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image19.jpg">
+			<img src="image19.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image20.jpg">
+			<img src="image20.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image21.jpg">
+			<img src="image21.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image263.jpg">
+			<img src="image263.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image270.jpg">
+			<img src="image270.jpg">
 
 		</div>
 			<div class="gallery">
-			<img src="../photos/image24.jpg">
+			<img src="image24.jpg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image268.jpeg">
+			<img src="image268.jpeg">
 
 		</div>
 		
 
 		<div class="gallery">
-			<img src="../photos/image27.jpeg">
+			<img src="image27.jpeg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image265.jpg">
+			<img src="image265.jpg">
 
 		</div>
-<div class="gallery">
-			<img src="../photos/image264.jpg">
+                <div class="gallery">
+			<img src="image264.jpg">
 
 		</div>
 		
 		
 		<div class="gallery">
-			<img src="../photos/image261.jpeg">
+			<img src="image261.jpeg">
 
 		</div>
 		<div class="gallery">
-			<img src="../photos/image262.jpg">
+			<img src="image262.jpg">
 
 		</div>
 		
 		<div class="gallery">
-			<img src="../photos/image269.jpeg">
-
-		</div>
-
-		
-
-		
-		<div class="gallery">
-			<img src="../photos/image267.jpg">
+			<img src="image269.jpeg">
 
 		</div>
 
 		
 
 		
+		<div class="gallery">
+			<img src="image267.jpg">
+
+		</div>
+
+		
+
+		
 
 		<div class="gallery">
-			<img src="../photos/image271.jpg">
+			<img src="image271.jpg">
 
 		</div>
 
