--- a/index2.html
+++ b/index2.html
@@ -18,8 +18,8 @@
 		<h1>ShivSmit</h1>
  
 		<ul>
-	        <li><a href="../index.html"><i class="fas fa-home"></i>Home</a></li>
-			<li><a href="../shivsmitphoto/index1.html"><i class="fas fa-camera"></i>Photos</a></li>
+	        <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
+			<li><a href="index1.html"><i class="fas fa-camera"></i>Photos</a></li>
 			<li><a href="index2.html"><i class="fas fa-video"></i>Videos</a></li>
 		
 
@@ -30,19 +30,19 @@
 
 	<div class="vid"></div>
 
-		<video src="../videos/video.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
+		<video src="video.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
 		</video>
 		
-		<video src="../videos/video1.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
+		<video src="video1.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
 		</video>
 
-		<video src="../videos/video2.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
+		<video src="video2.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
 		</video>
 
-		<video src="../videos/video3.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
+		<video src="video3.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
 		</video>
 
-		<video src="../videos/video4.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
+		<video src="video4.mp4" controls="controls" loop="loop" autoplay="autoplay" width="500">	
 		</video>
 
 
